<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RotateView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_setting1">rotate cycle</string>
    <string name="action_setting2">only rotate</string>
    <string name="action_setting3">only cycle</string>
    <string name="action_setting4">normal</string>

</resources>
