<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_more"
        app:showAsAction="always"
        android:title="@string/action_settings">
        <menu>
            <item android:id="@+id/setting1"
                app:showAsAction="withText"
                android:title="@string/action_setting1"/>
            <item android:id="@+id/setting2"
                app:showAsAction="withText"
                android:title="@string/action_setting2"/>
            <item android:id="@+id/setting3"
                app:showAsAction="withText"
                android:title="@string/action_setting3"/>
            <item android:id="@+id/setting4"
                app:showAsAction="withText"
                android:title="@string/action_setting4"/>
        </menu>
    </item>
</menu>
